--- a/app/build.gradle
+++ b/app/build.gradle
@@ -3,11 +3,11 @@ plugins {
 }
 
 android {
-    namespace 'kfsuniversity.faculty.of.specific.art.graduationproject'
+    namespace 'kfsuniversity.faculty.of.specific.art.mainactivity'
     compileSdk 33
 
     defaultConfig {
-        applicationId "kfsuniversity.faculty.of.specific.art.graduationproject"
+        applicationId "kfsuniversity.faculty.of.specific.art.mainactivity"
         minSdk 21
         targetSdk 33
         versionCode 1
@@ -33,9 +33,8 @@ dependencies {
     implementation 'androidx.appcompat:appcompat:1.6.1'
     implementation 'com.google.android.material:material:1.8.0'
     implementation 'androidx.constraintlayout:constraintlayout:2.1.4'
-    implementation 'androidx.core:core-ktx:1.9.0'
+    implementation 'com.cloudinary:cloudinary-android:2.3.1'
     testImplementation 'junit:junit:4.13.2'
-
     androidTestImplementation 'androidx.test.ext:junit:1.1.5'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.5.1'
 }
